# calypso

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.calypso/TS_data/: TS_test_M1_nwindows1_norb10_nbinsPb100_log.pkl  TS_test_M1_nwindows1_norb1_nbinsPb100_log.pkl  TS_test_M2_nwindows1_norb10_nbinsPb100_log.pkl  TS_test_M2_nwindows1_norb1_nbinsPb100_log.pkl  TS_test_Mb_nwindows1_norb10_nbinsPb100_log.pkl  TS_test_Mb_nwindows1_norb1_nbinsPb100_log.pkl  TS_train_M1_nwindows1_norb10_nbinsPb100_log.pkl  TS_train_M1_nwindows1_norb1_nbinsPb100_log.pkl  TS_train_M2_nwindows1_norb10_nbinsPb100_log.pkl  TS_train_M2_nwindows1_norb1_nbinsPb100_log.pkl  TS_train_Mb_nwindows1_norb10_nbinsPb100_log.pkl  TS_train_Mb_nwindows1_norb1_nbinsPb100_log.pkl
.calypso/assets/: best_models.json  cfg.yaml  models_meta.json  runtime.json  val_meta.json  zenodo_manifest.json  zenodo_manifest_archived.json
assets/: registry.json
calypso/: __init__.py  runtime.py
calypso.egg-info/: PKG-INFO  SOURCES.txt
calypso/assets/: cfg.yaml  runtime.json  zenodo_manifest.json
calypso/data/: loader.py  preprocessing.py
calypso/emulator/: data.py  emulator.py  io.py
calypso/inference/: inference.py
calypso/interpolation/: __init__.py  cholesky_interpolator.py  uncertainty.py
calypso/models/: __init__.py  models.py
calypso/pca/: global_pca.py
calypso/reconstruction/: __init__.py  emulator.py
calypso/utils/: config.py  constants.py  plotting.py  zdownload.py
demo/: __init__.py  alpha_disk.py  calypso_demo.ipynb  demo_constants.py  lsst.py  photometry.py
demo/streamlit/: requirements.txt  streamlit_app.py
emulator/: __init__.py  decoding.py  emulator.py  io.py
utils/: device.py
