[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calypso"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "pyyaml>=6.0",
    "dill>=0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["calypso", "calypso*"]
